# specular-manifold-sampling

./: .gitignore  README.md
results/Figure_10_TwostageSolutions/: generate_plots.py  plane_notebook.xml  plane_notebook_smoothed.xml
results/Figure_11_GlintsZoom/: generate_plots.py  scene_zoom.xml
results/Figure_12_GlintsMIS/: curved.xml  render.py
results/Figure_14_15_MainComparison/: plane_pt.xml  plane_sms.xml  pool_pt.xml  pool_sms.xml  render_plane.py  render_pool.py  render_references_plane.py  render_references_pool.py  render_references_sphere.py  render_sphere.py  sphere_pt.xml  sphere_sms.xml
results/Figure_16_Displacement/: render.py  sphere_1_disp.xml  sphere_1_nrm.xml  sphere_2_disp.xml  sphere_2_nrm.xml  sphere_3_disp.xml  sphere_3_nrm.xml
results/Figure_17_Roughness/: plane_pt.xml  plane_sms.xml  render.py
results/Figure_18_DoubleRefraction/: render.py  render_references.py  slab_pt.xml  slab_sms.xml
results/Figure_19_GlintsComparison/: generate_normalmaps.py  generate_plots.py  kettle_pt.xml  kettle_ref.xml  kettle_sms.xml  kettle_yan.xml  render_kettle.py  render_references.py  render_shoes.py  shoes_pt.xml  shoes_ref.xml  shoes_sms.xml  shoes_yan.xml
results/Figure_1_13_Teaser/: scene.xml  scene_comparison_pt.xml  scene_comparison_sms.xml
results/Figure_4_5_RingSolutions/: generate_fractal.py  generate_plots_normalmapped.py  generate_plots_simple.py  ring.xml  ring_notebook_normalmapped.xml  ring_notebook_simple.xml  ring_paths.xml
results/Figure_6_Sequence/: render.py  (+3 more)
src/mitsuba/: CMakeLists.txt  normalmap_to_flakes.cpp
(+107 files in other folders)
